Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14009

Release binaries cannot be used for profiling

XMLWordPrintable

    • 69377f0de47e414f10cfcf336b4fe648dbc82332

      When profiling an application you want to use an optimized release build. However, these builds, by default:

      • do not enable CONFIG+=qml_debug
      • do not contain enough debug information

      For most profiling tasks they are thus pretty useless. This leads to frequent complaints by users trying to start the QML profiler on one of those and getting error messages. Valgrind can do with the minimal debug info we include in release binaries, but other profilers might need DWARF info, which isn't incldued.

      A solution would be the introduction of a third "Profile" mode, besides "Debug" and "Release". This profile mode would build on qmake's "release" configuration and by default build with CONFIG+="qml_debug separate_debug_info force_debug_info". For users it would be obvious which mode to choose for profiling and they would automatically get sane settings for doing so. We could then even consider stripping the release binaries from any debug information.

      Another solution would be the addition of a "Separate debug info" checkbox in the qmake settings. The user would have to know when to check this, or the "Enable QML debugging" checkbox. Possibly a default could be given by the Qt version in use.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes