Qmake: Add an option to put debug info into separate files

Also, prepare for setting this automatically once we get a
distinct "Profile" build configuration.

Task-number: QTCREATORBUG-14009
Change-Id: I70556806e33d47341360231aeff844e490675f6a
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@theqtcompany.com>
Reviewed-by: Daniel Teske <daniel.teske@theqtcompany.com>